--- a/packages/book/app/styles/index.scss
+++ b/packages/book/app/styles/index.scss
@@ -1,13 +1,9 @@
-@use "sass:meta";
+@use 'font';
+@use 'editor';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@include meta.load-css('font.scss');
-@include meta.load-css('editor.scss');
 
-/* html {
-  font-family: "Ubuntu", serif;
-} */
 :root {
   --layout-max-width: 1330px;
   --dir-width: 300px;
@@ -59,9 +55,6 @@ h1.heading:first-child {
 
 .header {
   @apply fixed left-0 top-0 w-full h-14 flex justify-center z-50 border-b dark:bg-[rgba(30,30,31,.8)] dark:border-white/5 border-black/5 bg-[rgba(248,248,248,.8)] backdrop-blur-md;
-  &.book {
-    @apply lg:hidden;
-  }
 }
 
 .header-content {
@@ -334,5 +327,78 @@ td {
   @apply rounded relative dark:bg-black/30 bg-white dark:border-white/15 border-black/20 flex items-center justify-center border w-[17px] h-[17px] text-xs;
   &.checked {
     @apply dark:bg-blue-600 border-none bg-blue-500 text-white;
+  }
+}
+
+/* 样式代码 */
+.menu-icon {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+}
+
+.menu-icon span {
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: black;
+  border-radius: 2px;
+  transition: transform 0.3s ease, opacity 0.3s ease, top 0.3s ease;
+  position: absolute;
+}
+
+.menu-icon span:nth-child(1) {
+  top: 0;
+}
+
+.menu-icon span:nth-child(2) {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.menu-icon span:nth-child(3) {
+  top: 100%;
+  transform: translateY(-100%);
+}
+
+.menu-icon.active span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.menu-icon.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.menu-icon.active span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
+.header-link{
+  @apply text-sm text-black/60 relative leading-8 dark:text-white/70;
+  .link{
+    @apply hover:text-blue-500 duration-200 text-black/60 dark:text-white/70 dark:hover:text-blue-500;
+  }
+  .link-menu {
+    display: none;
+    @apply absolute top-full left-0 flex-col p-2 rounded-lg shadow shadow-black/20 bg-white dark:bg-[#1e1e1f] space-y-1 min-w-52 dark:border dark:border-white/10 dark:shadow-none;
+    a{
+      @apply leading-8 px-2.5 hover:bg-black/5 rounded text-black/80 dark:text-white dark:hover:bg-white/5;
+    }
+  }
+  .arrow{
+    @apply text-xs ml-1 duration-200 text-black/30 dark:text-white/30;
+  }
+}
+.header-link:hover{
+  .link-menu{
+    display: flex;
+  }
+  .arrow{
+    @apply rotate-180 text-black/30 dark:text-white/30;
   }
 }
